<resources>
    <string name="app_name">NCDIR APP</string>
    <string name="app_name2">NCDIR - ICMR Bangalore</string>

    <string name="b_abtus">About Us</string>
    <string name="b_ncdirP">Ncdir Profile</string>
    <string name="b_query">ADVANCED QUERRY</string>
    <string name="b_setting">Setting</string>
    <string name="b_pbcrP">PBCR Profile</string>
    <string name="b_lang">Language</string>


    <string name="adrs_name">National Centre for Disease Informatics and Research
(Indian Council of Medical Research)
II Floor of Nirmal Bhawan, ICMR Complex,
Poojanhalli Road, Off NH-7, Adjacent to Trumpet Flyover of BIAL
Kannamangala Post Bangalore - 562 110. India.
    </string>
    <string name="Off_name">NCDIR Bangalore</string>
    <string name="FROM_THE_DESK">FROM THE DESK OF DIRECTOR</string>
    <string name="MAIN_OBJECTIVE">The main broad and overall objective of the centre is to sustain and develop a national
        research data-base on cancer, diabetes, CVD and stroke through recent advances in electronic information
        technology with a national collaborative network, so as to undertake aetiological, epidemiological,
        clinical and control research in these areas.</string>
    <string name="FROM_THE_DESK_OF_DIRECTOR">The National Centre for Disease Informatics and Research (NCDIR), Bengaluru is one of its kind of unique institution which utilizes information science for health research as its integral component. This has been amply demonstrated by the evolution of the ICMR National Cancer Registry Program (NCRP) since 1982,which has now blossomed into a vibrant network ofmulti-disciplinary researchers representing more than 700 sources of cancer registration across the country. Read More...</string>
    <string name="title_activity_main3">NCDIR</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NCDIR-ICMR</string>
    <string name="nav_header_subtitle">www.ncdirindia.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>

