<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FEFCFF"
    tools:context=".Main3Activity">

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="62dp"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="42dp"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:background="@drawable/setting"
        />

    <Button
        android:id="@+id/imageButton2"
        android:layout_width="66dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_centerHorizontal="true"
        android:background="@drawable/profile2"
        android:gravity="center|bottom"
        android:onClick="onClickTest"
        android:paddingBottom="0dp"
        android:textColor="#A52A2A"
        android:textSize="25sp"
        />


    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="68dp"
        android:layout_height="63dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageButton5"
        android:layout_marginEnd="34dp"
        android:layout_marginRight="34dp"
        android:background="@drawable/queryadd"
         />


    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_centerHorizontal="true"
        android:background="@drawable/web_hi_res_512" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="69dp"
        android:layout_height="72dp"
        android:layout_alignLeft="@+id/imageButton1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageButton1"
        android:layout_marginBottom="159dp"
        android:background="@drawable/abtus_res"
        />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_alignLeft="@+id/imageButton3"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_alignTop="@+id/imageButton1"
        android:background="@drawable/languagechange"
        android:onClick="onChangeLang"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="284dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="67dp"
        app:srcCompat="@drawable/icmrbuilding" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="221dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15sp"
            android:text="@string/app_name2"
            android:textAlignment="center"
            android:textColor="#A52A2A"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100sp"
            android:layout_height="50sp"
            android:layout_marginTop="10sp"
            android:layout_weight="1"
            android:tag="22"
            app:srcCompat="@drawable/icmr" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/imageButton5"
        android:layout_below="@+id/imageButton5"
        android:layout_marginTop="-159dp"

        android:text="@string/b_abtus"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignRight="@+id/imageButton5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton2"
        android:layout_centerHorizontal="true"
        android:text="@string/b_ncdirP"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/imageButton2"
        android:layout_marginEnd="19dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/b_query"
        android:layout_alignParentRight="true"
        android:layout_marginRight="19dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/imageButton1"
        android:layout_marginTop="-42dp"
        android:text="@string/b_setting"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignLeft="@+id/textView3"
        tools:ignore="RtlCompat" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/imageButton3"
        android:layout_below="@+id/imageButton4"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:text="@string/b_lang"
        android:layout_alignLeft="@+id/imageButton3" />


</RelativeLayout>